@@ -9,17 +9,6 @@ use Test::NoWarnings;
 
 # Test.
 my $self = {
-	'key' => 'foo',
-};
-eval {
-	check_number($self, 'key');
-};
-is($EVAL_ERROR, "Parameter 'key' must be a number.\n",
-	"Parameter 'key' must be a number.");
-clean();
-
-# Test.
-$self = {
 	'key' => 10,
 };
 my $ret = check_number($self, 'key');
@@ -57,3 +46,15 @@ $self = {
 };
 $ret = check_number($self, 'key');
 is($ret, undef, "Value is undefined, that's ok.");
+
+# Test.
+$self = {
+	'key' => 'foo',
+};
+eval {
+	check_number($self, 'key');
+};
+is($EVAL_ERROR, "Parameter 'key' must be a number.\n",
+	"Parameter 'key' must be a number.");
+clean();
+
